# parallel_worlds

./: README.md
opencv_0/src/: CMakeLists.txt  main.cpp
parallel_worlds_0/src/: CMakeLists.txt  main.cpp
parallel_worlds_1/src/: CMakeLists.txt  ImageFilter.hpp  OpenCLInterface.hpp  ProgramInterface.hpp  greyImageFilters.cl  main.cpp
parallel_worlds_2/src/: CMakeLists.txt  DeviceInterface.hpp  greyImageFilters.cl  main.cpp
parallel_worlds_2_cuda/src/: CMakeLists.txt  CUDAInterface.hpp  GreyFilter.cu  GreyFilter.hpp  ImageFilter.hpp  SobelFilter.cu  SobelFilter.hpp  main.cu
parallel_worlds_2_cuda_opt/src/: CMakeLists.txt  EffectFilter.cu  EffectFilter.hpp  GreyFilter.cu  GreyFilter.hpp  ImageFilter.hpp  SobelFilter.cu  SobelFilter.hpp  main.cu
parallel_worlds_3/src/: CMakeLists.txt  EffectFilter.hpp  ImageFilter.hpp  ProgramInterface.hpp  SobelFilter.hpp  effectFilter.cl  main.cpp
